# presto-pasta

./: BENCH.md  Cargo.toml  DESIGN.md  LICENSE  README.md  flake.nix  prompt
.github/workflows/: release.yml
src/: buf.rs  dns.rs  flow.rs  lib.rs  netdev.rs  proto.rs  seccomp.rs  stats.rs  tap.rs  uring.rs
tests/: differential.rs  liveness.rs  netns.rs
tests/common/: mod.rs
