[package]
name = "presto"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "User-mode NAT datapath for sandboxes: L2 tap to native host sockets"

[dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["net", "socket", "uio", "fs", "ioctl"] }
io-uring = "0.7"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
