[package]
name = "presto-pasta"
version = "0.0.3"
edition = "2024"
license = "MIT"
description = "User-mode NAT datapath for sandboxes: L2 tap to native host sockets"
repository = "https://github.com/Mic92/presto-pasta"
readme = "README.md"
keywords = ["sandbox", "networking", "nat", "pasta", "io-uring"]
categories = ["network-programming", "virtualization"]

[dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["net", "socket", "uio", "fs", "ioctl"] }
io-uring = "0.7"
foldhash = "0.2"
seccompiler = { version = "0.5", optional = true }

[dev-dependencies]
# Extra nix features used only by the tests (CPU pinning in the bench).
nix = { version = "0.31", features = ["sched", "process"] }

[features]
# Confine the datapath thread to a syscall allowlist while it runs.
seccomp = ["dep:seccompiler"]
# Count datapath events and print them when the event loop exits.
stats = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
